--- a/NantoNBaiFunction/NantoNBaiFunction.csproj
+++ b/NantoNBaiFunction/NantoNBaiFunction.csproj
@@ -8,6 +8,9 @@
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.0.1" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\NantoNBai\NantoNBai.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
