--- a/NantoNBai/NantoNBai.csproj
+++ b/NantoNBai/NantoNBai.csproj
@@ -1,11 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DocumentFormat.OpenXml" Version="3.0.0-beta0003" />
+    <PackageReference Include="ShapeCrawler" Version="0.49.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="nanto-n-bai-template.pptx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
