--- a/NantoNBai/NantoNBai.csproj
+++ b/NantoNBai/NantoNBai.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FreeSpire.Presentation" Version="7.8.0" />
     <PackageReference Include="ShapeCrawler" Version="0.49.0" />
   </ItemGroup>
 
