--- a/NantoNBaiFunction/NantoNBaiFunction.csproj
+++ b/NantoNBaiFunction/NantoNBaiFunction.csproj
@@ -18,5 +18,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
+    <None Update="nanto-n-bai-template.pptx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
