--- a/.github/workflows/deploy-azure-function-windows.yml
+++ b/.github/workflows/deploy-azure-function-windows.yml
@@ -4,7 +4,7 @@ on:
     branches:
     - master
 env:
-  AZURE_FUNCTIONAPP_NAME: NantoNBaiFunction20230928043720
+  AZURE_FUNCTIONAPP_NAME: NantoNBaiFunctionW
   AZURE_FUNCTIONAPP_PACKAGE_PATH: NantoNBaiFunction
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 6.0.x
