--- a/NantoNBai/NantoNBai.csproj
+++ b/NantoNBai/NantoNBai.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="FreeSpire.Presentation" Version="7.8.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="ShapeCrawler" Version="0.49.0" />
   </ItemGroup>
 
