--- a/E2ETest/E2ETest.csproj
+++ b/E2ETest/E2ETest.csproj
@@ -19,4 +19,10 @@
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="expect.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
