--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,4 @@ jobs:
         dotnet-version: ${{ env.DOTNET_VERSION }}
     - run: dotnet restore
     - run: dotnet build --no-restore
-    - run: dotnet test --no-build --verbosity normal
+    - run: dotnet test NantoNBaiTests/NantoNBaiTests.csproj --no-build --verbosity normal
