--- a/.github/workflows/NantoNBaiFunctionW.yml
+++ b/.github/workflows/NantoNBaiFunctionW.yml
@@ -5,7 +5,7 @@ on:
     - master
 env:
   AZURE_FUNCTIONAPP_NAME: NantoNBaiFunctionW
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: NantoNBaiFunction\.
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: NantoNBaiFunction
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 6.0.x
   WORKING_DIRECTORY: NantoNBaiFunction
