--- a/NantoNBaiFunction/NantoNBaiFunction.csproj
+++ b/NantoNBaiFunction/NantoNBaiFunction.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
