--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -26,7 +26,7 @@ jobs:
         dotnet-version: ${{ env.DOTNET_VERSION }}
     - run: dotnet restore E2ETest/E2ETest.csproj
     - run: dotnet build E2ETest/E2ETest.csproj --no-restore
-    - run: pwsh E2ETest/bin/Debug/net8.0/playwright.ps1 install
+    - run: pwsh E2ETest/bin/Debug/net8.0/playwright.ps1 install --with-deps
     - run: dotnet test E2ETest/E2ETest.csproj --no-build --verbosity normal
   
     - name: Check result
