--- a/.github/workflows/NantoNBaiFunctionW.yml
+++ b/.github/workflows/NantoNBaiFunctionW.yml
@@ -35,6 +35,12 @@ jobs:
     permissions:
       id-token: write #This is required for requesting the JWT
     steps:
+    - name: Login to Azure
+      uses: azure/login@v1
+      with:
+        client-id: ${{ secrets.__clientidsecretname__ }}
+        tenant-id: ${{ secrets.__tenantidsecretname__ }}
+        subscription-id: ${{ secrets.__subscriptionidsecretname__ }}
     - name: Download artifact from build job
       uses: actions/download-artifact@v3
       with:
